tests/errors/wrong_declaration.vpl
func test0(a)
  var x;
  var y;
end
